--- a/4_topics.Rmd
+++ b/4_topics.Rmd
@@ -24,6 +24,7 @@ library(plotly)
 library(glue)
 library(stm)
 library(janitor)
+library(cluster) 
 
 lyrics <- readRDS("./3_lyrics.Rds")
 lyrics_lines <- readRDS("./1_lyrics_lines.Rds")
@@ -40,7 +41,7 @@ writer_palette <- c(
 )
 ```
 
-> Section 4 of my [Battle of the Bands](https://mpfoley73.github.io/battle-of-the-bands/) text mining project compares recurring topics in songs by the writers from Queen, Rush, and AC/DC. Topic models identify dominant themes in text and are useful tools for summarizing large corposes. 
+> Section 4 of my [Battle of the Bands](https://mpfoley73.github.io/battle-of-the-bands/) text mining project compares recurring topics in songs by the writers from Queen, Rush, and AC/DC. Topic models identify dominant themes in text and are useful tools for summarizing large corposes. The topic model weights are useful inputs into a cluster analysis that finds similar songs. Fan of Freddie Mercury's The Fairy Feller's Master-Stroke? Try Neil Peart's Anthem - their lyrics clustered together!
 
 ## Background
 
@@ -52,7 +53,7 @@ STM differs from other topic models in that you can fit the model with controlli
 
 That is my approach here. I assume there is overlap among the song writers, but that some topics are more strongly associated with some writers than others. I wonder if I can use topic models to identify similar songs.
 
-My `lyrics` data frame consists of `r nrow(lyrics)` songs and `r ncol(lyrics)` columns. After the `lyrics` column, the remaining 8 columns are features engineered in the [text complexity](file:///C:/GitHub/battle-of-the-bands/3_complexity.html) section.
+My `lyrics` data frame consists of `r nrow(lyrics)` songs and `r ncol(lyrics)` columns. After the first eight descriptive attributes columns are 8 columns of features engineered in the [text complexity](file:///C:/GitHub/battle-of-the-bands/3_complexity.html) section.
 
 ```{r}
 glimpse(lyrics)
@@ -60,7 +61,7 @@ glimpse(lyrics)
 
 ## N-Grams
 
-A good first approach to analyzing lyrical content is to construct unigram and bigram counts. The **tidytext** provides an easy framework for tokenizing text into unigrams, pulling out connector words and other common "stop" words, and then taking summary statistics (usually just counts). Tidytext tokenizes into bigrams too, but bigrams are less insightful if one of the words is a stop word. [Josh Vanderleest](https://www.linkedin.com/in/josh-vanderleest-6674a87b) showed me a cool trick: tokenize into unigrams, remove stop words, reassemble into a stop-free document, then tokenize into bigrams.
+A good first approach to analyzing lyrical content is to construct unigram and bigram counts. The **tidytext** provides an easy framework for tokenizing text into unigrams, pulling out connector words and other common "stop" words, and then taking summary statistics (usually just counts). Tidytext tokenizes into bigrams too, but bigrams are less insightful if one of the words is a stop word. One option is to tokenize into unigrams, remove stop words, reassemble into a stop-free document, then tokenize into bigrams.
 
 ```{r}
 lyrics_tidy <- lyrics %>%
@@ -224,6 +225,8 @@ The **stm** package allows you to either specify the number of topics (K) to ide
 I expect lyrics to be correlated with the writer, so I will fit a *prevalence* model with `writer` as a covariate.
 
 ```{r}
+set.seed(1234)
+
 fit_prevalence <- stm::stm(
   documents = prepared$documents,
   vocab = prepared$vocab,
@@ -253,7 +256,7 @@ Let's look at Topic 2:
 stm::labelTopics(fit_prevalence, topics = 2)
 ```
 
-`findThoughts()` shows comments that mapped highly to the topic. I show the top 3 mappings below. Looking at the Highest Prob list, Peart's [Half the World](https://genius.com/Rush-half-the-world-lyrics) features *day*, *world*, and *half*; Peart's [Alien Shore](https://genius.com/Rush-alien-shore-lyrics) features just *world*, and ; May's [Some Day, One Day](https://genius.com/Queen-some-day-one-day-lyrics) features *day*, *hear*, and *son*. *word* and *call* appeared in none of these three songs.
+`findThoughts()` shows comments that mapped highly to the topic. The top 3 mappings are below. 
 
 ```{r}
 topic_thoughts <- stm::findThoughts(
@@ -264,7 +267,7 @@ topic_thoughts <- stm::findThoughts(
   meta = processed$meta
 )
 
-processed$meta[pluck(topic_thoughts$index, 1), ] %>% select(writer, song)
+processed$meta[pluck(topic_thoughts$index, 1), ] %>% select(writer, song, song_url)
 ```
 
 ## Model Exploration
@@ -299,7 +302,7 @@ Data frame `lyrics_tidy_2` has the `r fit_prevalence$theta %>% ncol()` topic wei
 ```{r}
 lyrics_tidy_2_long <- lyrics_tidy_2 %>% 
   pivot_longer(
-    cols = topic_1:topic_39, 
+    cols = starts_with("topic_"), 
     names_to = "topic_id", 
     values_to = "topic_weight"
   ) %>%
@@ -332,7 +335,7 @@ p <- lyrics_tidy_2_long %>%
 ggplotly(p, tooltip = "text")
 ```
 
-For example, in the plot above, topic, `r topic_lbl[39, ]$topic_long`, mapped highly to only a couple songs: `r lyrics_tidy_2_long %>% filter(song == "Was It All Worth It" & topic_id == "topic_39") %>% pull(topic_weight) %>% scales::percent(accuracy = 1)` for _Was it All Worth It_ and `r lyrics_tidy_2_long %>% filter(song == "Come and Get It" & topic_id == "topic_39") %>% pull(topic_weight) %>% scales::percent(accuracy = 1)`. _We Will Rock You_ was composed primarily of a single topic with a few other contributors.
+Here are the top topics for _We Will Rock You_.
 
 ```{r}
 lyrics_tidy_2_long %>%
@@ -340,7 +343,7 @@ lyrics_tidy_2_long %>%
   arrange(desc(topic_weight)) %>%
   mutate(topic_weight = topic_weight * 100) %>%
   head() %>%
-  select(topic, topic_weight) %>%
+  select(topic_long, topic_weight) %>%
   flextable::flextable() %>%
   flextable::colformat_double(digits = 0, suffix = "%") %>%
   flextable::autofit() %>%
@@ -349,22 +352,84 @@ lyrics_tidy_2_long %>%
 
 ## Similar Songs
 
+A cluster analysis can use the topics to find similar songs. I'll follow the steps from my [unsupervised learning handbook](https://bookdown.org/mpfoley1973/unsupervised-ml/cluster-analysis.html) chapter on K-mediods cluster analysis.
 
+The first step is to calculate the song distances from each other. I use the Gower distance.
 
 ```{r}
-lyrics_tidy_2_long %>% 
-  group_by(song_id) %>% 
-  summarize(.groups = "drop", max_wt = max(topic_weight)) %>%
-  ggplot(aes(x = max_wt)) +
-  geom_histogram()
+lyrics_gower <- lyrics_tidy_2 %>% 
+  select(-c(song_id:lyrics, lyrics_tidy)) %>%
+  cluster::daisy(metric = "gower")
+```
 
-lyrics_tidy_2_long %>% 
-  summarize(.groups = "drop", pct_lt10 = sum(topic_weight < .10) / n())
-  ggplot(aes(x = topic_weight)) +
-  geom_density()
-  summarize(gt10 = sum(if_else(topic_weight > .1, 1, 0)))
+Let’s see the most similar and dissimilar pairs of songs according to their Gower distance.
 
+```{r}
+x <- as.matrix(lyrics_gower)
+bind_rows(
+  lyrics_tidy_2[which(x == min(x[x != 0]), arr.ind = TRUE)[1, ], ],
+  lyrics_tidy_2[which(x == max(x[x != 0]), arr.ind = TRUE)[1, ], ]
+) %>%
+  as.data.frame() %>%
+  select(-c(lyrics_tidy, topic_1:topic_39)) %>%
+  mutate(across(everything(), as.character)) %>%
+  pivot_longer(cols = -song) %>%
+  pivot_wider(names_from = song) %>%
+  flextable::flextable() %>%
+  flextable::add_header_row(values = c("", "Similar", "Dissimilar"), colwidths = c(1, 2, 2)) %>%
+  flextable::border(j = c(1, 3), border.right = officer::fp_border("gray80"), part = "all")
+```
+
+The K-means algorithm randomly assigns all observations to one of _K_ clusters. K-means iteratively calculates the cluster centroids and reassigns observations to their nearest centroid. Centroids are set of mean values for each feature (hence the name "K-*means*"). The iterations continue until either the centroids stabilize or the iterations reach a set maximum (typically 50). The result is _K_ clusters with the minimum total intra-cluster variation.
+
+What value should _K_ take? Construct a *silhouette plot*. 
+
+```{r warning=FALSE, message=FALSE}
+set.seed(1234)
+
+pam_mdl <- data.frame(k = 2:100) %>%
+  mutate(
+    mdl = map(k, ~pam(lyrics_gower, k = .)),
+    sil = map_dbl(mdl, ~ .$silinfo$avg.width)
+  )
+
+pam_mdl %>%
+  ggplot(aes(x = k, y = sil)) +
+  geom_point(size = 2) +
+  geom_line() +
+  geom_vline(aes(xintercept = 47), linetype = 2, size = 1, color = "goldenrod") +
+  scale_x_continuous(breaks = seq(0, 100, by = 5)) +
+  theme_light() +
+  labs(title = "Silhouette plot max occurs at K = 47 clusters.", 
+       subtitle = "K-Medoids within-cluster average silhouette width at candidate values of K.", 
+       y = "")
+```
+
+Attach the results to the original table for visualization and summary statistics.  
+
+```{r}
+pam_mdl_final <- pam_mdl %>% filter(k == 47) %>% pluck("mdl", 1)
+
+lyrics_tidy_3 <- lyrics_tidy_2 %>% 
+  mutate(cluster = as.factor(pam_mdl_final$clustering))
+```
+
+If each cluster were an album, which songs would be on them? Use the filter below to change the albums.
+
+```{r}
+lyrics_tidy_3 %>%
+  select(cluster, band, writer, song) %>%
+  arrange(cluster, band, writer, song) %>%
+  DT::datatable(
+    filter = "top",
+    options = list(pageLength = 20)
+  )
 ```
 
 ## Save work
 
+Save the lyrics with complexity stats for subsequent steps.
+
+```{r}
+saveRDS(lyrics_tidy_3, "./4_lyrics.Rds")
+```
